# basic_3d_engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/core/: engine.hpp
include/graphics/: renderer.hpp
include/graphics/metal/: metal_renderer.hpp
include/graphics/vulkan/: vulkan_renderer.hpp
include/platform/: platform.hpp  window.hpp
src/: CMakeLists.txt  main.cpp
src/core/: engine.cpp
src/graphics/metal/: metal_renderer.cpp  metal_renderer.mm
src/platform/macos/: platform.mm  window.mm
tests/: CMakeLists.txt  engine_test.cpp
